# telegram_weather_bot

./: CMakeLists.txt  CMakePresets.json  README.md
include/: rust.h
src/: main.c
weather_info/: Cargo.toml
weather_info/src/: lib.rs
